# oxidec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  justfile  meson.build
docs/: SPDLOG.md
include/: version.hpp.in
src/: main.cpp
src/driver/: arg_parser.cpp  index.hpp  invocation.driver.cpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/util/: ox.consts.hpp
